--- a/Resources/Prototypes/SS220/Language/language.yml
+++ b/Resources/Prototypes/SS220/Language/language.yml
@@ -295,5 +295,4 @@
     specialCharacterChance: 0.8
     specialCharacters:
       - character: " "
-    syllables: [1, 0, 01, 10, 11, 100, 101, 110, 111, 1000, 1001, 1010, 1011,
-                1100, 1110, 1111, 10000, 10001, 10010, 10011, 10100, 10101]
+    syllables: [1, 0]
