--- a/Resources/Prototypes/SS220/Language/language.yml
+++ b/Resources/Prototypes/SS220/Language/language.yml
@@ -9,7 +9,7 @@
 # Galactic common lanaguges region:
 - type: language
   id: Galactic
-  key: гл
+  key: gl
   name: "language-galacticcommon-name"
   description: "language-galacticcommon-desc"
   scrambleMethod: !type:SyllablesScrambleMethod
