--- a/Resources/Prototypes/SS220/Language/language.yml
+++ b/Resources/Prototypes/SS220/Language/language.yml
@@ -19,6 +19,7 @@
         capitalize: true
         weight: 0.3
     syllables: [бла, бла, бла, бле, мех, ньех, нах, ах, угу, увы]
+    replaceDictonary: Galactic
 
 - type: language
   id: SolCommon
@@ -33,6 +34,7 @@
         capitalize: true
         weight: 0.3
     syllables: [tao, shi, tzu, yi, com, be, is, i, op, vi, ed, lec, mo, cle, te, dis, e]
+    replaceDictonary: SolCommon
 
 - type: language
   id: Tradeband
@@ -53,6 +55,7 @@
                 dolor, in, reprehenderit, in, voluptate, velit, esse, cillum, dolore, eu, fugiat,
                 nulla, pariatur, excepteur, sint, occaecat, cupidatat, non, proident, sunt, in,
                 culpa, qui, officia, deserunt, mollit, anim, id, est, laborum]
+    replaceDictonary: Tradeband
 
 - type: language
   id: Codespeak
@@ -68,6 +71,7 @@
         capitalize: false
         weight: 0.3
     syllables: [виски, кола, тоник, водка, вермут, ром, эхо, лима, альфа, дельта, гамма, сигма, чарли, зомби, шлюз, бармен, повар, грузчик, учёный, инженер, карп, ИИ, борг, смена, цель, русский, перчатки, адвокат, пьяный, бипски, иан, морти, черный, белый, капитан, и]
+    replaceDictonary: Codespeak
 
 - type: language
   id: Gutter
@@ -83,6 +87,7 @@
         capitalize: true
         weight: 0.3
     syllables: [gra, ba, ba, breh, bra, rah, dur, ra, ro, gro, go, ber, bar, geh, heh, gra]
+    replaceDictonary: Gutter
 
 - type: language
   id: Clownish
@@ -98,6 +103,7 @@
         capitalize: true
         weight: 0.3
     syllables: [хонк, cкуик, ойк, бонк, тут, наф, пуп, ви, вуб, ниф]
+    replaceDictonary: Clownish
 
 - type: language
   id: NeoRusskiya
@@ -119,6 +125,7 @@
                 vaya, myak, gino, volo, olam, miti, nino, menov, perov, odasky, trov, niki, ivano, dostov,
                 sokol, oupa, pervom, schel, tizan, chka, tagan, dobry, okt, boda, veta, idi, cyk, blyt, hui,
                 na, udi, litchki, casa, linka, toly, anatov, vich, vech, vuch, toi, ka, vod]
+    replaceDictonary: NeoRusskiya
 
 # Race region:
 - type: language
@@ -139,6 +146,7 @@
               sa, as, se, es, si, is, so, os, su, us, ss, ss, ra, ar, re, er,
               ri, ir, ro, or, ru, ur, rs, sr, a, a, e, e, i, i, o, o, u, u,
               s, s]
+    replaceDictonary: Sintaunathi
 
 - type: language
   id: Siiktajr
@@ -159,6 +167,7 @@
               r'rhaz, kal, chur, eech, thaa, dra, jurl, jurl, azuъ,
               mah, sanu, dra, ii'r, ъka, aasi, far, mah, tul, ragh
               wa, baq, ara, qara, zir', sam, mak, cresh, khan]
+    replaceDictonary: Siiktajr
 
 - type: language
   id: VoxPidgin
@@ -176,6 +185,7 @@
                 ki, ya, ta, ha, ka, ya, yi, chi, cha, kah,
                 SKRE, AHK, EHK, RAWK, KRA, AAA, EEE, KI,
                 II, KRI, KA]
+    replaceDictonary: VoxPidgin
 
 - type: language
   id: Rootspeak
@@ -191,6 +201,7 @@
         capitalize: true
         weight: 0.3
     syllables: [hs, zt, kr, st, sh]
+    replaceDictonary: Rootspeak
 
 - type: language
   id: Bubblish
@@ -206,6 +217,7 @@
         capitalize: true
         weight: 0.3
     syllables: [блоб, плап, поп, боп, буп, пламп, буб, баб, бламп]
+    replaceDictonary: Bubblish
 
 - type: language
   id: Tkachi
@@ -226,6 +238,7 @@
                 dår, næ, møt, idd, hvo, ja, på, han, så, ån, det, att, nå, gö, bra,
                 int, tyc, om, när, två, må, dag, sjä, vii, vuo, eil, tun, käyt, teh,
                 vä, hei, huo, suo, ää, ten, ja, heu, stu, uhr, kön, we, hön]
+    replaceDictonary: Tkachi
 
 - type: language
   id: Eldwarf
@@ -243,6 +256,7 @@
     syllables: [вр, врон, рон, крон, друк, трым, бд, шкж, брм, рыт, грн, драш, клм, трк, врг, хрм,
                 рд, клыт, зм, эмээ, гнык, зрм, длк, брг, грд, скрын, вродд, бдар, глтх, скрр,
                 трг, бртх, хыкл, тр, крг, рдм, грыж, мд, гхрм, клм, прк, кнур]
+    replaceDictonary: Eldwarf
 
 - type: language
   id: Arati
@@ -263,6 +277,7 @@
                 карш, аш, шр, зз, ср, хаз, рашк, харш, рашн, шан, харз, шах, шарз, рашар,
                 кар, харат, хш, харр, арш', ашан, шанн, хсар, ашат, хаа, хазт, рашта, зара,
                 хаш, анн, аро', хат]
+    replaceDictonary: Arati
 
 - type: language
   id: Canilunzt
@@ -282,6 +297,7 @@
                 enem, zandt, tzch, noch, hel, ischt, far, wa, baram, iereng, tech, lach,
                 sam, mak, lich, gen, or, ag, eck, gec, stag, onn, bin, ket, jarl, vulf,
                 einech, cresthz, azunein, ghzth]
+    replaceDictonary: Canilunzt
 
 # Misc region:
 - type: language
@@ -296,3 +312,4 @@
     specialCharacters:
       - character: " "
     syllables: [1, 0]
+    replaceDictonary: Binary
